fix: seeding issue and add new column

--- a/CodeWithMena.PerfumeShop.PL/Views/PerfumesOil/Index.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/PerfumesOil/Index.cshtml
@@ -13,9 +13,9 @@
 		<tr>
 			<th scope="col">#</th>
 			<th scope="col">Name</th>
-			<th scope="col">Fragrancy Type</th>
+			<th scope="col">Fragrance Type</th>
 			<th scope="col">Supplier Price</th>
-			<th scope="col">Fragrancy Family</th>
+			<th scope="col">Fragrance Family</th>
 			<th scope="col">Rating Of Sale</th>
 			<th scope="col">Sale Price</th>
 			<th scope="col">Last Modified On</th>
@@ -29,11 +29,12 @@
 				<td>@perfume.Name</td>
 				<td>@perfume.FragranceType</td>
 				<td>@perfume.PerfumePrice?.SupplierPrice</td>
-				<td>@perfume.FragrancyFamily</td>
+				<td>@perfume.FragranceFamily</td>
 				<td>@perfume.RatingOfSale</td>
 				<td>@perfume.PerfumePrice?.SalePrice</td>
 				<td>@perfume.LastModifiedOn</td>
 			</tr>
 		}
 	</tbody>
+
 </table>
