--- a/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
@@ -27,8 +27,12 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-bg-danger" asp-area="" asp-controller="PerfumesOil" 
-							asp-action="Index">Perfumes Oil</a>
+							<a class="nav-link text-bg-danger" asp-area="" asp-controller="PerfumesOil"
+							   asp-action="Index">Perfumes Oil</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link ms-auto text-bg-info" asp-area="" asp-controller="PerfumesOil"
+							   asp-action="Create">Create Perfumes Oil</a>
 						</li>
 					</ul>
 				</div>
