--- a/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
@@ -1,11 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using CodeWithMena.PerfumeShop.PL.Controllers
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - CodeWithMena.PerfumeShop.PL</title>
+	<title>@ViewData["Title"] - The King Of Perfumes</title>
 	<script type="importmap"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/PerfumesOil.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/CodeWithMena.PerfumeShop.PL.styles.css" asp-append-version="true" />
 </head>
@@ -13,27 +16,25 @@
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CodeWithMena.PerfumeShop.PL</a>
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">The King Of Perfumes</a>
+
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
-						<li class="nav-item">
+						@* <li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-bg-danger" asp-area="" asp-controller="PerfumesOil"
+						</li> *@
+						<li class="nav-item  mx-3">
+							<a class="nav-link text-bg-danger rounded-2" asp-area="" asp-controller="PerfumesOil"
 							   asp-action="Index">Perfumes Oil</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link ms-auto text-bg-info" asp-area="" asp-controller="PerfumesOil"
-							   asp-action="Create">Create Perfumes Oil</a>
-						</li>
+
 					</ul>
 				</div>
 			</div>
@@ -47,7 +48,9 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; 2025 - CodeWithMena.PerfumeShop.PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; 2025 - The king Of Perfumes - <a class="disabled text-secondary" asp-area="" target="_blank" asp-controller="PerfumesOil" asp-action="@nameof(PerfumesOilController.Download)">
+				<i class="fa-solid fa-download fs-6"></i>
+			</a>
 		</div>
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
