--- a/CodeWithMena.PerfumeShop.PL/Views/PerfumesOil/Details.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/PerfumesOil/Details.cshtml
@@ -24,10 +24,10 @@
 					<span class="action-icon">✎</span>
 					<span class="action-text">Edit</span>
 				</a>
-				<a class="btn-action btn-delete" asp-controller="PerfumesOil" asp-action="Delete" asp-route-id="@Model.Id">
+				@* <a class="btn-action btn-delete" asp-controller="PerfumesOil" asp-action="Delete" asp-route-id="@Model.Id">
 					<span class="action-icon">🗑</span>
 					<span class="action-text">Delete</span>
-				</a>
+				</a> *@
 			</div>
 		</div>
 	</div>
