--- a/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						</li> *@
-						<li class="nav-item  mx-3">
+						@* <li class="nav-item  mx-3">
 							<a class="nav-link text-bg-danger rounded-2" asp-area="" asp-controller="PerfumesOil"
 							   asp-action="Index">Perfumes Oil</a>
-						</li>
+						</li> *@
 
 					</ul>
 				</div>
