--- a/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using CodeWithMena.PerfumeShop.PL.Controllers
+@using CodeWithMena.PerfumeShop.PL.Controllers
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,17 +24,28 @@
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
-						@* <li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="PerfumesOil" asp-action="Index">Perfumes Oil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-						</li> *@
-						@* <li class="nav-item  mx-3">
-							<a class="nav-link text-bg-danger rounded-2" asp-area="" asp-controller="PerfumesOil"
-							   asp-action="Index">Perfumes Oil</a>
-						</li> *@
-
+							<a class="nav-link text-dark" asp-controller="Bottles" asp-action="Index">Bottles</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="POS" asp-action="Create">POS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="Settings" asp-action="AlcoholPrice">Alcohol Price</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown">Reports</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" asp-controller="Reports" asp-action="Daily">Daily</a></li>
+								<li><a class="dropdown-item" asp-controller="Reports" asp-action="Range">Range</a></li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="Mix" asp-action="Index">Mix Lookup</a>
+						</li>
 					</ul>
 				</div>
 			</div>
