feat: Add invoice retrieval and sale update functionality with corresponding UI enhancements

--- a/CodeWithMena.PerfumeShop.PL/Views/POS/Create.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/POS/Create.cshtml
@@ -11,8 +11,8 @@
 <div class="row">
     <div class="col-md-8">
         <div class="card mb-3">
-            <div class="card-header">Add Perfume Item</div>
-            <div class="card-body">
+            @* <div class="card-header">Add Perfume Item</div>
+             <div class="card-body">
                 <div class="row g-2 mb-2">
                     <div class="col-md-5 position-relative">
                         <label class="form-label">Perfume (type to search)</label>
@@ -47,7 +47,7 @@
                     <button type="button" id="btnGetPrice" class="btn btn-outline-secondary">Get Price</button>
                     <button type="button" id="btnAdd" class="btn btn-primary">Add to Cart</button>
                 </div>
-            </div>
+            </div> *@
         </div>
         <div class="card mb-3">
             <div class="card-header">Add Custom Item (name + price + count)</div>
