--- a/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
+++ b/CodeWithMena.PerfumeShop.PL/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-controller="PerfumesOil" asp-action="Index">The King Of Perfumes</a>
+				<a class="navbar-brand" asp-controller="POS" asp-action="Create">The King Of Perfumes</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +24,9 @@
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-controller="POS" asp-action="Create">POS</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-controller="PerfumesOil" asp-action="Index">Perfumes Oil</a>
 						</li>
@@ -47,6 +50,19 @@
 							<a class="nav-link text-dark" asp-controller="Mix" asp-action="Index">Mix Lookup</a>
 						</li>
 					</ul>
+					@if (User.Identity?.IsAuthenticated == true)
+					{
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<span class="nav-link text-dark">@User.Identity.Name</span>
+							</li>
+							<li class="nav-item">
+								<form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+									<button type="submit" class="btn btn-link nav-link text-dark" style="text-decoration: none;">Sign out</button>
+								</form>
+							</li>
+						</ul>
+					}
 				</div>
 			</div>
 		</nav>
